--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -1,13 +1,15 @@
 source 'https://rubygems.org'
 
 gem 'rails', '3.2.6'
-
+gem 'bootstrap-sass', '2.0.0'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 group :development, :test do
 
   gem 'sqlite3'
   gem 'rspec-rails', '2.10.0'
+  gem 'guard-rspec', '0.5.5'
+
 end
 
 # Gems used only for assets and not required
@@ -25,7 +27,14 @@ end
 gem 'jquery-rails', '2.0.0'
 
 group :test do
+  gem 'rspec-rails', '2.10.0'
   gem 'capybara', '1.1.2'
+  gem 'rb-inotify', '0.8.8'
+  gem 'libnotify', '0.5.9'
+
+  gem 'guard-spork', '0.3.2'
+  gem 'spork', '0.9.0'
+
 end
 
 group :production do
@@ -45,3 +54,4 @@ end
 
 # To use debugger
 # gem 'debugger'
+
